# Tree_contest

./: .gitignore  CMakeLists.txt
Contest_files/: CMakeLists.txt  Container.h  GroupContainer.h  Mem.h  MemoryManager.h  TreeAbstract.h  Пример_использования_конструктора_и_деструктора_в_цикле.cpp
Tests/: CMakeLists.txt  TestAsContainer.cpp  TestAsContainer.h  TestAsTree.cpp  TestAsTree.h  TestData.h  main.cpp
Tree/: CMakeLists.txt  Tree.cpp  Tree.h  makefile
